[gd_scene load_steps=13 format=3 uid="uid://cgpaeodlbq1jo"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_qwe6w"]
[ext_resource type="Shader" path="res://interface/pauseMenu/blur_shader.gdshader" id="2_onl2a"]
[ext_resource type="FontFile" uid="uid://cmlwdpru017yw" path="res://interface/mainMenu/American Captain.otf" id="2_yn0t1"]
[ext_resource type="Texture2D" uid="uid://bqrchughclfhx" path="res://interface/pauseMenu/Button_Blue_3Slides.png" id="3_x6c3d"]
[ext_resource type="Texture2D" uid="uid://bxduehra2x44k" path="res://interface/pauseMenu/Button_Red_3Slides.png" id="4_y8k84"]
[ext_resource type="Texture2D" uid="uid://bfco07fem7l3y" path="res://interface/pauseMenu/Button_Hover_3Slides.png" id="5_ulwr2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_18ul5"]
shader = ExtResource("2_onl2a")
shader_parameter/lod = 0.0

[sub_resource type="Theme" id="Theme_tp1ue"]
default_font = ExtResource("2_yn0t1")
default_font_size = 25

[sub_resource type="Animation" id="Animation_02l3f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_xer0d"]
resource_name = "pause"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_nky2p"]
resource_name = "resumeGame"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2et48"]
_data = {
"RESET": SubResource("Animation_02l3f"),
"pause": SubResource("Animation_xer0d"),
"resumeGame": SubResource("Animation_nky2p")
}

[node name="pauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_qwe6w")

[node name="bg" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_18ul5")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="menuHolder" type="VBoxContainer" parent="bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -120.0
offset_right = 24.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.66608, 1.66608)
theme = SubResource("Theme_tp1ue")

[node name="resume" type="TextureButton" parent="bg/menuHolder"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_x6c3d")
texture_pressed = ExtResource("4_y8k84")
texture_hover = ExtResource("5_ulwr2")

[node name="Label" type="Label" parent="bg/menuHolder/resume"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -18.0
offset_right = 64.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "Voltar ao Jogo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="quit" type="TextureButton" parent="bg/menuHolder"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_x6c3d")
texture_pressed = ExtResource("4_y8k84")
texture_hover = ExtResource("5_ulwr2")

[node name="Label" type="Label" parent="bg/menuHolder/quit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -18.0
offset_right = 64.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "Sair"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2et48")
}

[connection signal="pressed" from="bg/menuHolder/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="bg/menuHolder/quit" to="." method="_on_quit_pressed"]
